@@ -30,13 +30,13 @@ be_eventtype::be_eventtype (void)
     AST_Decl (),
     AST_Type (),
     UTL_Scope (),
+    AST_Interface (),
     be_scope (),
     be_decl (),
     be_type (),
     be_interface (),
-    be_valuetype (),
-    AST_Interface (),
     AST_ValueType (),
+    be_valuetype (),
     AST_EventType ()
 {
 }
@@ -61,6 +61,13 @@ be_eventtype::be_eventtype (UTL_ScopedName *n,
     AST_Type (AST_Decl::NT_eventtype,
               n),
     UTL_Scope (AST_Decl::NT_eventtype),
+    AST_Interface (n,
+                   inherits,
+                   n_inherits,
+                   inherits_flat,
+                   n_inherits_flat,
+                   0,
+                   abstract),
     be_scope (AST_Decl::NT_eventtype),
     be_decl (AST_Decl::NT_eventtype,
              n),
@@ -73,25 +80,6 @@ be_eventtype::be_eventtype (UTL_ScopedName *n,
                   n_inherits_flat,
                   0,
                   abstract),
-    be_valuetype (n,
-                  inherits,
-                  n_inherits,
-                  inherits_concrete,
-                  inherits_flat,
-                  n_inherits_flat,
-                  supports,
-                  n_supports,
-                  supports_concrete,
-                  abstract,
-                  truncatable,
-                  custom),
-    AST_Interface (n,
-                   inherits,
-                   n_inherits,
-                   inherits_flat,
-                   n_inherits_flat,
-                   0,
-                   abstract),
     AST_ValueType (n,
                    inherits,
                    n_inherits,
@@ -104,6 +92,18 @@ be_eventtype::be_eventtype (UTL_ScopedName *n,
                    abstract,
                    truncatable,
                    custom),
+    be_valuetype (n,
+                  inherits,
+                  n_inherits,
+                  inherits_concrete,
+                  inherits_flat,
+                  n_inherits_flat,
+                  supports,
+                  n_supports,
+                  supports_concrete,
+                  abstract,
+                  truncatable,
+                  custom),
     AST_EventType (n,
                    inherits,
                    n_inherits,
