@@ -31,8 +31,10 @@ be_eventtype_fwd::be_eventtype_fwd (void)
     AST_Decl (),
     AST_Type (),
     AST_InterfaceFwd (),
-    AST_ValueTypeFwd (),
+    be_decl (),
+    be_type (),
     be_interface_fwd (),
+    AST_ValueTypeFwd (),
     be_valuetype_fwd (),
     AST_EventTypeFwd ()
 {
@@ -42,15 +44,19 @@ be_eventtype_fwd::be_eventtype_fwd (AST_Interface *dummy,
                                     UTL_ScopedName *n)
   : COMMON_Base (dummy->is_local (),
                  dummy->is_abstract ()),
-    AST_Decl (AST_Decl::NT_valuetype_fwd,
+    AST_Decl (AST_Decl::NT_eventtype_fwd,
               n),
-    AST_Type (AST_Decl::NT_valuetype_fwd,
+    AST_Type (AST_Decl::NT_eventtype_fwd,
               n),
     AST_InterfaceFwd (dummy,
                       n),
-    AST_ValueTypeFwd (dummy,
-                      n),
+    be_decl (AST_Decl::NT_eventtype_fwd,
+             n),
+    be_type (AST_Decl::NT_eventtype_fwd,
+             n),
     be_interface_fwd (dummy,
+                      n),
+    AST_ValueTypeFwd (dummy,
                       n),
     be_valuetype_fwd (dummy,
                       n),
