@@ -28,8 +28,8 @@ ACE_RCSID (be,
 be_union_fwd::be_union_fwd (void)
   : COMMON_Base (),
     AST_Decl (),
-    AST_StructureFwd (),
     AST_Type (),
+    AST_StructureFwd (),
     AST_UnionFwd (),
     be_decl (),
     be_type (),
@@ -42,10 +42,10 @@ be_union_fwd::be_union_fwd (AST_Union *dummy,
   : COMMON_Base (),
     AST_Decl (AST_Decl::NT_union_fwd,
               n),
-    AST_StructureFwd (dummy,
-                      n),
     AST_Type (AST_Decl::NT_union_fwd,
               n),
+    AST_StructureFwd (dummy,
+                      n),
     AST_UnionFwd (dummy,
                   n),
     be_decl (AST_Decl::NT_union_fwd,
